Make edit button

--- a/plugin/src/styles/colors.scss
+++ b/plugin/src/styles/colors.scss
@@ -7,7 +7,7 @@ $todoist-colors: (
   "lime-green": #7ecc49,
   "green": #299438,
   "mint-green": #6accbc,
-  "teal": #158fad,
+  "teal": #30FFF2,
   "sky-blue": #14aaf5,
   "light-blue": #96c3eb,
   "blue": #4073ff,
