--- a/plugin/src/ui/query/styles.scss
+++ b/plugin/src/ui/query/styles.scss
@@ -59,7 +59,7 @@
 }
 
 .todoist-tasks-list {
-  margin-top: 1em;
+  margin-top: 0em;
 
   .todoist-tasks-list {
     margin-top: 0em;
@@ -77,7 +77,7 @@
 
 .todoist-task-container {
   display: flex;
-  padding: 0.5em 0;
+  // padding: 0.5em 0;
   border-bottom: 1px solid var(--todoist-task-separator-color);
 
   &:first-child {
@@ -112,7 +112,7 @@
       height: 16px;
       width: 16px;
       border-radius: 50%;
-      border: 1px solid var(--todoist-checkbox-border);
+      border: 2px solid var(--todoist-checkbox-border);
       background-color: var(--todoist-checkbox-background);
 
       &:hover {
