--- a/plugin/src/ui/query/styles.scss
+++ b/plugin/src/ui/query/styles.scss
@@ -18,39 +18,6 @@
       margin-left: 0.5em;
     }
 
-    .todoist-query-control-button {
-      padding: var(--size-2-2) var(--size-2-3);
-      color: var(--text-muted);
-      border-radius: var(--radius-s);
-      border: 1px solid var(--color-base-40);
-      box-shadow: none;
-
-      transition: opacity 0.33s;
-      opacity: 0;
-
-      .block-language-todoist:hover & {
-        opacity: 1;
-      }
-
-      &:hover {
-        background-color: inherit;
-        border: 1px solid var(--interactive-accent);
-      }
-
-      .markdown-reading-view &.edit-query {
-        display: none;
-      }
-
-      &.refresh-query.is-refreshing > .obsidian-icon {
-        @-webkit-keyframes spin {
-          100% {
-            -webkit-transform: rotate(360deg);
-          }
-        }
-
-        animation: spin 1s linear infinite reverse;
-      }
-    }
   }
 }
 
@@ -82,6 +49,9 @@
 
   &:first-child {
     border-top: 1px solid var(--todoist-task-separator-color);
+  }
+  &:hover {
+    border: 1px solid var(--todoist-checkbox-border-hover);
   }
 
   &[data-priority="1"] {
@@ -125,9 +95,48 @@
     margin-left: 0.5em;
     width: 100%;
 
+    .todoist-task-content {
+      overflow: hidden;
+      width: 50%;
+    }
+
     .todoist-task-description {
       font-size: var(--font-small);
       color: var(--text-muted);
+    }
+
+    .todoist-query-control-button {
+      padding: var(--size-2-2) var(--size-2-3);
+      color: var(--text-muted);
+      border-radius: var(--radius-s);
+      border: 1px solid var(--color-base-40);
+      box-shadow: none;
+
+      transition: opacity 0.33s;
+      opacity: 0;
+
+      .block-language-todoist:hover & {
+        opacity: 1;
+      }
+
+      &:hover {
+        background-color: inherit;
+        border: 1px solid var(--interactive-accent);
+      }
+
+      .markdown-reading-view &.edit-query {
+        display: none;
+      }
+
+      &.refresh-query.is-refreshing > .obsidian-icon {
+        @-webkit-keyframes spin {
+          100% {
+            -webkit-transform: rotate(360deg);
+          }
+        }
+
+        animation: spin 1s linear infinite reverse;
+      }
     }
 
     .todoist-task-metadata {
